[gd_scene load_steps=17 format=3 uid="uid://22hjgugr4bg3"]

[ext_resource type="Script" path="res://Player.gd" id="1_nvb10"]
[ext_resource type="Shader" path="res://hover.gdshader" id="2_6qxoj"]
[ext_resource type="Texture2D" uid="uid://brgn0v2dlo1aw" path="res://sprites/Characters/Character1.png" id="2_eo7b2"]
[ext_resource type="Script" path="res://Attack.gd" id="3_m3bif"]
[ext_resource type="AudioStream" uid="uid://cjhlyk5slw3am" path="res://SFX/Swish_51_SP.wav" id="4_573gc"]
[ext_resource type="Script" path="res://PlayerSprite.gd" id="4_q1ewa"]
[ext_resource type="Texture2D" uid="uid://bp11a7a475jro" path="res://sprites/Animations/AttackAnim2.png" id="5_rdspu"]
[ext_resource type="Texture2D" uid="uid://b4labx8lkuv6l" path="res://sprites/Animations/AttackAnim3 2.png" id="6_3vnk7"]
[ext_resource type="Texture2D" uid="uid://b5o78h5iial6g" path="res://sprites/Animations/AttackAnim4.png" id="7_mn2ks"]
[ext_resource type="Texture2D" uid="uid://4qspmbnqkk0g" path="res://sprites/Animations/AttackAnim5.png" id="8_3rtbw"]
[ext_resource type="Texture2D" uid="uid://dyyawlyfqicph" path="res://sprites/Animations/AttackAnim6.png" id="9_psfnf"]
[ext_resource type="Texture2D" uid="uid://cxlylusoy40wj" path="res://sprites/Characters/CharacterCursor.png" id="11_mvpm4"]
[ext_resource type="PackedScene" uid="uid://hg7e4ve8vfed" path="res://health_pool.tscn" id="11_qak4c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_82wfn"]
shader = ExtResource("2_6qxoj")
shader_parameter/amplitude = 4.0
shader_parameter/flash_mix = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_dk842"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_rdspu")
}, {
"duration": 1.0,
"texture": ExtResource("6_3vnk7")
}, {
"duration": 1.0,
"texture": ExtResource("7_mn2ks")
}, {
"duration": 1.0,
"texture": ExtResource("8_3rtbw")
}, {
"duration": 1.0,
"texture": ExtResource("9_psfnf")
}],
"loop": true,
"name": &"AttackAnimation",
"speed": 18.0
}]

[sub_resource type="GDScript" id="GDScript_0a75v"]
script/source = "extends Sprite2D

func _physics_process(delta):
	self.look_at(get_global_mouse_position())
"

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_nvb10")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_82wfn")
position = Vector2(-1, 0)
texture = ExtResource("2_eo7b2")
script = ExtResource("4_q1ewa")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-2, -43)
polygon = PackedVector2Array(30, 23, 37, 52, 38, 67, 34, 87, 27, 99, 14, 103, 2, 103, -7, 101, -19, 91, -31, 79, -35, 67, -35, 47, -29, 21, -20, 1, -8, -16, 3, -16, 10, -11, 19, 0, 25, 9.99999)

[node name="TimedNode2D" type="Node2D" parent="."]

[node name="Attack" type="CharacterBody2D" parent="."]
script = ExtResource("3_m3bif")

[node name="AttackSwish" type="AudioStreamPlayer2D" parent="Attack"]
stream = ExtResource("4_573gc")
volume_db = -6.0

[node name="Animation" type="AnimatedSprite2D" parent="Attack"]
visible = false
position = Vector2(-3.33786e-06, -2.98023e-06)
rotation = 1.5708
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_dk842")
animation = &"AttackAnimation"
offset = Vector2(0, -50)

[node name="Area2D" type="Area2D" parent="Attack"]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Attack/Area2D"]
position = Vector2(97, -1)
polygon = PackedVector2Array(12, -22, 12, 17, 9, 39, -7, 65, -22, 56, -51, 41, -62, -37, -39, -64, -28, -78, -9, -62)

[node name="CharacterCursor" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
texture = ExtResource("11_mvpm4")
offset = Vector2(80, 0)
script = SubResource("GDScript_0a75v")

[node name="HealthPool" parent="." instance=ExtResource("11_qak4c")]
position = Vector2(-3, -73)
health = 5.0
max_health = 5.0

[connection signal="hurt" from="." to="Sprite2D" method="_on_player_hurt"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="attack_hit" from="Attack" to="." method="_on_attack_attack_hit"]
[connection signal="animation_looped" from="Attack/Animation" to="Attack" method="_on_animation_animation_looped"]
[connection signal="die" from="HealthPool" to="." method="_on_health_pool_die"]
